--- a/default_2/css/my-media.css
+++ b/default_2/css/my-media.css
@@ -1,9 +1,7 @@
 @media (min-width: 768px) {
   .leftside-navigation ul.sidebar-menu li a:hover {
     color: #ae140e;
-    background-color: #e9e9e9!important;
-    border-left: 3px #ae140e solid;
-  }
+}
 
   .leftside-navigation ul.sidebar-menu li a.active:hover {
     border-left: 3px #ae140e solid;
@@ -43,11 +41,11 @@
 
   .test-questions-box .radio:hover {
     border-radius: 2px;
-    border: #007fb6 1px solid;
+    border: #bb342f 1px solid;
   }
 
   .test-questions-box .radio:hover label {
-    color: #007fb6;
+    color: #bb342f;
   }
 
   .test-questions-box .radio label {
@@ -62,7 +60,7 @@
 
   .my-activities-page .radio:hover {
     border-radius: 2px;
-    border: #007fb6 1px solid;
+    border: #bb342f 1px solid;
   }
 
   .my-activities-page.radio:hover label {
@@ -112,7 +110,7 @@
   line-height: 18px;
   margin-left: 75px;
 }.my-matches-page .matches-tab-section ul li.active .image-box {
-  background: #007fb6;
+  background: #bb342f;
   display: block;
   color: #fff;
 } .my-matches-page .match-session-desk {
@@ -338,7 +336,7 @@ min-height: 60px;
   }
 
   .modal-header h4.modal-title p {
-    font-size: 13px;
+    font-size: 14px;
   }
 
   #main-content.my-action-plan .uploaded-resource-section {
@@ -363,7 +361,7 @@ min-height: 60px;
 @media only screen and (max-width: 667px) {
   #modal-snff .modal-body .form-group .dropdown-input .code-list-click {
     
-    font-size: 13px;
+    font-size: 14px;
    
 }
 #modal-snff .modal-body .form-group .dropdown-input ul.code-list {
@@ -610,7 +608,7 @@ position: inherit;
   .my-activities-page .my-tab-function.for-activities .profile-tab-details ul.drag-ul li {
     padding: 8px;
     padding-left: 75px;
-    font-size: 13px;
+    font-size: 14px;
   }
 
   #main-content.my-activities-page .my-tab-function.for-activities ul.tab-ul li {
@@ -826,13 +824,13 @@ position: inherit;
   }
 
   .btn.btn-md {
-    font-size: 13px;
+    font-size: 14px;
     padding: 5px 12px;
   }
 
   .btn.btn-xs {
-    font-size: 11px;
-    padding: 1px 5px;
+    font-size: 14px;
+    padding: 6px 8px;
   }
 
   .col-lg-1, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-md-1, .col-md-10, .col-md-11, .col-md-12, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-sm-1, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-xs-1, .col-xs-10, .col-xs-11, .col-xs-12, .col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8, .col-xs-9 {
@@ -854,7 +852,7 @@ position: inherit;
   }
 
   .modal-header h4.modal-title p {
-    font-size: 13px;
+    font-size: 14px;
   }
 
   #modal-signup .section-first .col-md-4 {
@@ -915,7 +913,7 @@ position: inherit;
   }
 
   #blue-scheme .sidebar-toggle-box .fa-bars {
-    color: #007fb6;
+    color: #bb342f;
     font-size: 18px;
     margin-top: 2px;
   }
@@ -1207,7 +1205,7 @@ position: inherit;
   .new-faq-sec ul li a.title {
     padding: 10px 15px;
     padding-right: 30px;
-    font-size: 13px;
+    font-size: 14px;
   }
 
   .test-questions-box .radio {
@@ -1222,11 +1220,11 @@ position: inherit;
   }
 
   .test-questions-box h5 {
-    font-size: 13px;
+    font-size: 14px;
   }
 
   .test-questions-box h5 {
-    font-size: 13px;
+    font-size: 14px;
   }
 
   .test-questions-box .radio label {
@@ -1238,13 +1236,13 @@ position: inherit;
   }
 
   .test-questions-box .radio label.hover {
-    border: 1px #007fb6 solid;
+    border: 1px #bb342f solid;
   }
 
   .test-questions-box .radio label.option_new.hover {
-    border: 1px #007fb6 solid;
+    border: 1px #bb342f solid;
     background: #fff;
-    color: #007fb6;
+    color: #bb342f;
   }
 
   .test-questions-box .margin-bottom-30 {
@@ -1411,7 +1409,7 @@ position: inherit;
 
   .result-btn-row .btn-vsm {
     background: none!important;
-    color: #007fb6;
+    color: #bb342f;
     padding: 0;
     border: 0;
     margin-top: 5px;
@@ -1462,7 +1460,7 @@ position: inherit;
   }
 
   .my-matches-page .matches-tab-section ul li.active .image-box {
-    background: #007fb6;
+    background: #bb342f;
     display: block;
     color: #fff;
   }
