--- a/default/css/style.css
+++ b/default/css/style.css
@@ -3879,34 +3879,31 @@ body{
     font-size: 15px;
     height: 317px;
 }
-.head-2.std2{
-     padding: 250px 0px 250px 0px;
-     background: url(../images/bin.jpg)no-repeat;
-     background-size: cover;
+..head-2{
+      padding: 250px 0px 250px 0px;
+      background-size: cover;
      background-position: 100% top;
      background-attachment: fixed;
+}
+.head-2.std2{
+     background: url(../images/bin.jpg)no-repeat;
 }
 .head-2.std11{
-     padding: 250px 0px 250px 0px;
      background: url(../images/class9.jpg)no-repeat;
-     background-size: cover;
-     background-position: 100% top;
-     background-attachment: fixed;
 }
+
 @media(max-width: 768px){
 
-.head-2.std2{
-     padding: 92px 0px 28px 0px;
-     background: url(../images/bin-mob.jpg)no-repeat;
+.head-2{
+     padding: 64px 0px 28px 0px;
      background-position: 100% top;
      background-attachment: fixed;
-     
+}
+.head-2.std2{
+     background: url(../images/bin-mob.jpg)no-repeat;
 }
 .head-2.std11{
-     padding: 92px 0px 28px 0px;
      background: url(../images/class9-mob.jpg)no-repeat;
-     background-position: 100% top;
-     background-attachment: fixed;
 }
      .pg-contact .content-box {
     height: auto;
