--- a/default/css/style.css
+++ b/default/css/style.css
@@ -3879,7 +3879,7 @@ body{
     font-size: 15px;
     height: 317px;
 }
-..head-2{
+.head-2{
       padding: 250px 0px 250px 0px;
       background-size: cover;
      background-position: 100% top;
