--- a/default/css/style.css
+++ b/default/css/style.css
@@ -63,6 +63,9 @@ body{
      -o-transition: all 0.5s ease;
      transition:all 0.5s ease;
 }
+a:focus{
+     color: #fff;
+}
  h1, h2 {
      font-weight:700;
      line-height:28px;
