--- a/default_2/css/my-styles.css
+++ b/default_2/css/my-styles.css
@@ -463,7 +463,7 @@ ul.sidebar-menu li a.active {
   font-size: 14px;
   color: #bb342f;
     background: #fff;
-    border-bottom: 3px #fff solid;
+  
 }
 
 .leftside-navigation ul.sidebar-menu li a.active {
@@ -6232,10 +6232,10 @@ position: relative;
 }
 
 #sidebar, #main-content, .c_panel, ul.sidebar-menu li a, .header {
-  -webkit-transition: none!important;
-  -moz-transition: none!important;
-  -o-transition: none!important;
-  transition: none!important;
+  -webkit-transition: all 0s ease-in-out;
+  -moz-transition: all 0s ease-in-out;
+  -o-transition: all 0s ease-in-out;
+  transition: all 0s ease-in-out;
 }
 
 .why-upgrade {
@@ -6755,5 +6755,5 @@ display: none
     background: #e66030!important;
 }
 .nopadd{
-  padding: 0;
+  padding: 0!important;
 }
