--- a/default_2/css/my-styles.css
+++ b/default_2/css/my-styles.css
@@ -413,7 +413,7 @@ small {
 
 #blue-scheme ul.sidebar-menu li.sidebar-profile {
   border-bottom: 1px solid #e9e9e9!important;
-  background-color: #ae140e !important;
+  background-color: #bb342f !important;
   color: #fff!important;
 }
 #blue-scheme ul.sidebar-menu li.sidebar-profile span{
