--- a/admin/default/css/app.css
+++ b/admin/default/css/app.css
@@ -1878,9 +1878,9 @@ select[multiple='multiple'] {
   right: 0;
   z-index: 2;
   display: block;
-  width: 2.5rem;
-  height: 2.5rem;
-  line-height: 2.5rem;
+  width: 2.5rem!important;
+  height: 2.5rem!important;
+  line-height: 3.5rem!important;
   text-align: center; }
 
 select.form-control:not([size]):not([multiple]),
