--- a/admin/default/css/bootstrap-extended.css
+++ b/admin/default/css/bootstrap-extended.css
@@ -567,7 +567,7 @@ button:focus {
   .header-navbar.navbar-semi-dark {
     background: #FFFFFF; }
     .header-navbar.navbar-semi-dark .navbar-header {
-      background: #1D2B36; }
+      background: #fff; }
     .header-navbar.navbar-semi-dark .navbar-nav li {
       line-height: 1; }
     .header-navbar.navbar-semi-dark .navbar-nav .nav-link {
