--- a/admin/default/css/bootstrap-extended.css
+++ b/admin/default/css/bootstrap-extended.css
@@ -831,7 +831,7 @@ button:focus {
   .header-navbar.navbar-semi-dark .hamburger-inner::after {
     background-color: #FFFFFF; }
   .header-navbar.navbar-dark .navbar-header .navbar-nav .nav-link, .header-navbar.navbar-semi-dark .navbar-header .navbar-nav .nav-link {
-    color: #FFFFFF; }
+    color: #bb342f; }
   .header-navbar.navbar-dark .navbar-container .navbar-nav .nav-link, .header-navbar.navbar-semi-dark .navbar-container .navbar-nav .nav-link {
     color: #55595c; } }
 
@@ -942,6 +942,7 @@ button:focus {
     margin-bottom: 0; }
   .card-header .heading-elements,
   .card-header .heading-elements-toggle {
+    display: none;
     background-color: inherit;
     position: absolute;
     top: 14px;
