--- a/admin/default/css/bootstrap.css
+++ b/admin/default/css/bootstrap.css
@@ -1381,7 +1381,7 @@ pre {
 
 .thead-inverse th {
   color: #fff;
-  background-color: #373a3c; }
+  background-color: #bb342f; }
 
 .thead-default th {
   color: #55595c;
@@ -2193,9 +2193,9 @@ tbody.collapse.in {
     text-decoration: none;
     background-color: #f5f5f5; }
   .dropdown-item:hover {
-    color: #2b2d2f;
+    color: #fff;
     text-decoration: none;
-    background-color: #f5f5f5; }
+    background-color: #bb342f; }
   .dropdown-item.active, .dropdown-item.active:focus {
     color: #fff;
     text-decoration: none;
