--- a/default/css/style.css
+++ b/default/css/style.css
@@ -2527,6 +2527,24 @@ a:focus{
      height: 70px;
      border-radius: 2px;
 }
+input.custom  {
+     border: 1px solid #dfdfdf;
+     padding: 8px;
+     box-sizing: border-box;
+     width: 100%;
+     height: 45px;
+     border-radius: 4px;
+     font-size: 14px;
+     color: #000;
+     margin-bottom: 5px;
+}
+textarea.custom  {
+     border: 1px solid #dfdfdf;
+     padding: 8px;
+     box-sizing: border-box;
+     height: 70px;
+     border-radius: 2px;
+}
  .log-in-pop-right form input[type="submit"] {
      color: #fff;
      height: 32px;
@@ -5628,9 +5646,7 @@ padding: 6px 25px;
 .ad-log-main{
     position: fixed;
     overflow: hidden;
-	background: #005C97;  /* fallback for old browsers */
-	background: -webkit-linear-gradient(to right, #363795, #005C97);  /* Chrome 10-25, Safari 5.1-6 */
-	background: linear-gradient(to right, #363795, #005C97); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background-color: #eee;
     width: 100%;
     height: 100%;
 }
