--- a/default/css/style.css
+++ b/default/css/style.css
@@ -6314,3 +6314,6 @@ padding: 6px 25px;
         .carousel-inner{
           border:solid 1px #f5f5f5;
         }
+        .error {
+          color: #b62424;
+        }
