--- a/default/css/style.css
+++ b/default/css/style.css
@@ -6022,7 +6022,7 @@ padding: 6px 25px;
     display: block;
     border-radius: 50%;
 }
-.carousel .testimonial {
+.carousel p {
     padding: 30px 0 10px;
     color: #fff;
 }
