--- a/default/css/style.css
+++ b/default/css/style.css
@@ -6023,7 +6023,11 @@ padding: 6px 25px;
     border-radius: 50%;
 }
 .carousel .testimonial {
-    padding: 30px 0 10px;
+   
+    color: #fff;
+}
+.carousel p {
+    padding: 10px 0 10px;
     color: #fff;
 }
 .carousel .overview b {
