--- a/default/css/style.css
+++ b/default/css/style.css
@@ -3806,10 +3806,13 @@ textarea.custom  {
 }
  .head-2-inn h1{
      margin-top: 0px;
-     color: #fff;
+     color:#fff;
      padding-bottom: 18px;
      line-height: 42px;
 }
+ .head-2-inn .text-white{
+     color:#2c2e3b!important;
+ }
  .head-2-inn p{
      color: #ffffff;
     font-size: 18px;
@@ -3845,7 +3848,7 @@ textarea.custom  {
      background-attachment: fixed;
 }
 .head-2.std2{
-     background: url(../images/bin.jpg)no-repeat;
+     background: url(../images/bin1.jpg)no-repeat;
 }
 .head-2.std8{
      background: url(../images/class8.jpg)no-repeat;
@@ -3857,7 +3860,7 @@ textarea.custom  {
      background: url(../images/class9.jpg)no-repeat;
 }
 .head-2.graduates{
-     background: url(../images/graduates.jpg)no-repeat;
+     background: url(../images/graduates2.jpg)no-repeat;
 }
 .head-2.partnership{
      background: url(../images/mentor-partnership.jpg)no-repeat;
@@ -3879,18 +3882,23 @@ textarea.custom  {
 }
 .head-2.std2{
      background: url(../images/bin-mob.jpg)no-repeat;
+     margin-top:50px;
 }
 .head-2.std8{
      background: url(../images/class8-mob.jpg)no-repeat;
+     margin-top: 50px;
 }
 .head-2.std11{
      background: url(../images/class9-mob.jpg)no-repeat;
+     margin-top: 50px;
 }
 .head-2.std9{
      background: url(../images/class10-mob.jpg)no-repeat;
+     margin-top: 50px;
 }
 .head-2.graduates{
      background: url(../images/graduates.jpg)no-repeat;
+     margin-top: 50px;
 }
      .pg-contact .content-box {
     height: auto;
