--- a/default/css/style.css
+++ b/default/css/style.css
@@ -1555,7 +1555,7 @@ a:focus{
      font-size: 50px;
      text-transform: uppercase;
      line-height: 50px;
-     color: #fff;
+     color: #000;
 }
  #jssor_1 h2 span{
      font-size: 50px;
